Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10180

main.events_restart fails on valgrind builder: void THD::inc_thread_count(): Assertion `!abort_loop' failed.

    XMLWordPrintable

Details

    Description

      The failure happened twice in two last builds on 10.2, starting from this:
      http://buildbot.askmonty.org/buildbot/builders/work-amd64-valgrind/builds/8876
      But apparently never before that, although we have a different issue for this test MDEV-10043.

      main.events_restart                      w1 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2016-06-05 22:26:00
      line
      mysqld: /var/lib/buildbot/maria-slave/work-opensuse-amd64/build/sql/sql_class.h:1920: void THD::inc_thread_count(): Assertion `!abort_loop' failed.
      Attempting backtrace. You can use the following information to find out
      ==9346== 1 bytes in 1 blocks are still reachable in loss record 1 of 1,058
      ==9346==    at 0x4C27407: operator new(unsigned long) (vg_replace_malloc.c:333)
      ==9346==    by 0x70C08C: Events::init(THD*, bool) (events.cc:885)
      ==9346==    by 0x751CB9: event_scheduler_update(sys_var*, THD*, enum_var_type) (sys_vars.cc:894)
      ==9346==    by 0x57F276: sys_var::update(THD*, set_var*) (set_var.cc:204)
      ==9346==    by 0x581219: set_var::update(THD*) (set_var.cc:800)
      ==9346==    by 0x57FE88: sql_set_variables(THD*, List<set_var_base>*, bool) (set_var.cc:701)
      ==9346==    by 0x628B31: mysql_execute_command(THD*) (sql_parse.cc:4685)
      ==9346==    by 0x62F476: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7725)
      ==9346==    by 0x632B89: dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool) (sql_parse.cc:1789)
      ==9346==    by 0x633303: do_command(THD*) (sql_parse.cc:1350)
      ==9346==    by 0x72B2EB: do_handle_one_connection(CONNECT*) (sql_connect.cc:1358)
      ==9346==    by 0x72B4D1: handle_one_connection (sql_connect.cc:1264)
      ==9346==    by 0xBC7D56: pfs_spawn_thread (pfs.cc:1862)
      ==9346==    by 0x4E3806F: start_thread (in /lib64/libpthread-2.9.so)
      ==9346==    by 0x62FC13C: clone (in /lib64/libc-2.9.so)
      ==9346== 8 bytes in 1 blocks are still reachable in loss record 2 of 1,058
      ==9346==    at 0x4C27407: operator new(unsigned long) (vg_replace_malloc.c:333)
      ==9346==    by 0x907799: LOGGER::init_log_tables() (log.cc:1189)
      ==9346==    by 0x56F46E: init_server_components() (mysqld.cc:5349)
      ==9346==    by 0x57016B: mysqld_main(int, char**) (mysqld.cc:5870)
      ==9346==    by 0x6247585: (below main) (in /lib64/libc-2.9.so)
      ...
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5h
                  5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.