MDEV-10180 main.events_restart fails on valgrind builder: void THD::inc_thread_count(): Assertion `!abort_loop' failed.

remove an overly strong assert